namespaces/live.cloud-platform.service.justice.gov.uk/laa-crime-equinity-historical-data-frontend-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-crime-equinity-historical-data-frontend-staging"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "equinity-data-migration"
    cloud-platform.justice.gov.uk/application: "Equinity data migration"
    cloud-platform.justice.gov.uk/owner: "Equinity Data Migration: laa-eq-data-migration-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-crime-equinity-historical-data-frontend"
    cloud-platform.justice.gov.uk/team-name: "laa-crime-equinity-data"
    cloud-platform.justice.gov.uk/review-after: ""
